[project]
name = "compare-document-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.51.0",
    "marker-pdf>=1.9.3",
    "st-diff-viewer>=1.0.7",
    "streamlit>=1.49.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ['src']
include = ['compare_document_processing*']
